# klondike

./: Cargo.toml  README.md
.github/workflows/: release.yaml
klondike-app/: Cargo.toml  README.md
klondike-app/src/: app.rs  common.rs  main.rs
klondike-cli/: Cargo.toml  README.md
klondike-cli/src/: solver.rs  utils.rs  win.rs
klondike-common/: Cargo.toml  README.md
klondike-common/src/: board.rs  lib.rs
klondike-solver/: Cargo.toml  README.md
klondike-solver/src/: card.rs  helper.rs  lib.rs  pile.rs  solver.rs
klondike-win/: Cargo.toml  README.md
klondike-win/src/: inspect.rs  lib.rs
klondike-win/src/autoplay/: mod.rs  window.rs
src/: action.rs  board.rs  inspect.rs  lib.rs  main.rs
src/autoplay/: mod.rs  window.rs
src/solver/: card.rs  helper.rs  mod.rs  move_.rs  pile.rs
