[package]
name = "klondike-win"
version = "0.1.0"
description = "Windows-specific functionality for Klondike Solitaire"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
enigo = "0.5.0"

klondike-common = { path = "../klondike-common" }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.35"
windows-sys = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
